tests/ui/polymorphization/predicates.stderr
error: item has unused generic parameters
  --> $DIR/predicates.rs:10:4
   |
LL | fn bar<I>() {
   |    ^^^ - generic parameter `I` is unused

error: item has unused generic parameters
  --> $DIR/predicates.rs:15:4
   |
LL | fn foo<I, T>(_: I)
   |    ^^^    - generic parameter `T` is unused

error: item has unused generic parameters
  --> $DIR/predicates.rs:24:4
   |
LL | fn baz<I, T>(_: I)
   |    ^^^    - generic parameter `T` is unused

error: item has unused generic parameters
  --> $DIR/predicates.rs:45:19
   |
LL | impl<'a, I, T: 'a, E> Iterator for Foo<'a, I, E>
   |          -         - generic parameter `E` is unused
   |          |
   |          generic parameter `I` is unused
...
LL |         self.find(|_| true)
   |                   ^^^

error: item has unused generic parameters
  --> $DIR/predicates.rs:59:4
   |
LL | fn quux<A, B, C: Default>() -> usize
   |    ^^^^ -  - generic parameter `B` is unused
   |         |
   |         generic parameter `A` is unused

error: item has unused generic parameters
  --> $DIR/predicates.rs:76:4
   |
LL | fn foobar<F, G>() -> usize
   |    ^^^^^^ - generic parameter `F` is unused

error: aborting due to 6 previous errors

